@@ -7,11 +7,19 @@
 \section{Version 0.4-4 (2021-05-.., svn r1..)}{
   \subsection{NEW FEATURES}{
     \itemize{
+      \item (.)
+    }
+  }
+  \subsection{REFACTORING}{
+    \itemize{
+      \item To be more modular, our \file{test-tools.R} no longer
+      \code{source()} those of \pkg{Matrix}.
     }
   }
   \subsection{BUG FIXES}{
     \itemize{
-      \item \file{src/bd0.c} gave warning with some compiler settings with \code{-Wself-assign}.
+      \item \file{src/bd0.c} gave warning with some compiler settings with
+      \code{-Wself-assign}.% but our gcc 10.2.1 (20201125) does not work with -Wself-assign
 
       \item \file{test-tools.R} \code{readRDS_()} thinko fixed.
     }
